packages/isar_generator/test/errors/id/not_long2.dart
// Only int ids are allowed

import 'package:isar/isar.dart';

@Collection()
class Test {
  @Id()
  @Size32()
  int? id;
}
